--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.4+5
+version: 1.0.5+6
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -25,7 +25,8 @@ dependencies:
     sdk: flutter
   tflite: ^1.1.1
   splashscreen:
-  image_picker: ^0.6.7+14
+  image_picker: ^0.6.7+21
+  stats: ^1.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
